# synthesia-challenge

./: .gitignore  Dockerfile  Readme.md  docker-compose.yml  main.py  pyproject.toml
app/: __init__.py  fastapi_app.py
app/clients/: __init__.py  crypto.py  redis_queue.py
app/handlers/: crypto.py
app/routers/: __init__.py  crypto.py
tests/: conftest.py
tests/clients/: test_api_client.py
tests/routers/: test_crypto_router.py
