[tool.poetry]
name = "synthesia-challenge"
version = "0.1.0"
description = "Synthesia hiring challenge"
authors = ["Mohammed Shinoys Karakuni <shinoyskk.mec@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.79.0"
pydantic = "^1.9.1"
uvicorn = "^0.18.2"
gunicorn = "^20.1.0"
typer = "^0.6.1"
httpx = "^0.23.0"
redis = "^4.3.4"
rq = "^1.10.1"
rq-scheduler = "^0.11.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"
pytest = "^7.1.2"
pytest-httpx = "^0.21.0"
pytest-asyncio = "^0.19.0"
nest-asyncio = "^1.5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
